--- a/.github/workflows/validate-gentx.yml
+++ b/.github/workflows/validate-gentx.yml
@@ -9,5 +9,7 @@ jobs:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
+      - name: pwd
+        run: pwd
       - name: Validating...
         run: ./script/validate-gentx.sh
