--- a/.github/workflows/validate-gentx.yml
+++ b/.github/workflows/validate-gentx.yml
@@ -4,10 +4,12 @@ on:
     # branches: [dev]
 jobs:
   build:
-    name: GenTx
+    name: Validating
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
       - uses: actions/checkout@v2
+      - name: add permission
+        run: chmod +x ./scripts/validate-gentx.sh
       - name: Validating...
         run: ./scripts/validate-gentx.sh
