--- a/.github/workflows/validate-gentx.yml
+++ b/.github/workflows/validate-gentx.yml
@@ -8,6 +8,8 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     steps:
+      - name: 'Setup jq'
+        uses: dcarbone/install-jq-action@v2
       - uses: actions/checkout@v2
       - name: add permission
         run: chmod +x ./scripts/validate-gentx.sh
